# picguard.py

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
tests/: conftest.py  test_math_operations.py
